Abstracted map title
Quick change to allow for the editing of the campus map title using the mapconfig.json file instead of hard coding per application.

--- a/mapconfig.json
+++ b/mapconfig.json
@@ -1,5 +1,8 @@
 {
   "geoJSONFile": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&query=!padrenullquery&num_ranks=5000&MBL=800",
+  "globalMapOptions": {
+    "mapTitle" : "Campus map"
+  },
   "mapButtons":[
     {
       "id": "food-and-drink",
