--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "zepto": "^1.2.0"
   },
   "scripts": {
-    "publish": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
