--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -41,7 +41,7 @@
     }
   ],
   "globalNotice": {
-    "placeBeforeElement": ".c-map-header",
+    "placeBeforeElement": ".wrapper",
     "title": "",
     "description": "Here for Open Day? We've got an <a href=\"https://www.york.ac.uk/map/open-day-map\">Open Day Map</a> just for you",
     "noticeModifierClasses": "c-global-notice--highlighted",
