--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "dependencies": {
     "fuse.js": "^3.2.0",
     "jquery": "^3.3.1",
+    "semantic-release": "^15.6.0",
     "webpack": "^4.10.2",
-    "webpack-zepto": "^0.0.1",
     "zepto": "^1.2.0"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
+    "release": "semantic-release",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
