--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3"
-  }
+  },
+  "name": "campus-map",
+  "description": "University of York Campus Map project",
+  "version": "1.0.0",
+  "author": "University of York Digital Team",
+  "license": "MIT",
 }
