Corrected a typo in package.json file

--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
   "description": "University of York Campus Map project",
   "version": "1.0.0",
   "author": "University of York Digital Team",
-  "license": "MIT",
+  "license": "MIT"
 }
