--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -40,14 +40,14 @@
       "iconClass": "c-icon--envelope"
     }
   ],
-  "globalNotice": {
+  "globalNotice__UNCOMMENT_TO_USE": {
     "placeBeforeElement": ".wrapper",
     "title": "",
     "description": "Here for Open Day? We've got an <a href=\"https://www.york.ac.uk/map/open-day-map\">Open Day Map</a> just for you",
     "noticeModifierClasses": "c-global-notice--highlighted",
     "closeable": true
   },
-  "pointsOfInterest" : [
+  "pointsOfInterest__UNCOMMENT_TO_USE" : [
     {
       "title": "Piazza Building",
       "lat": 53.947752,
