--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -40,10 +40,10 @@
       "iconClass": "c-icon--envelope"
     }
   ],
-  "globalNotice__UNCOMMENT_TO_USE": {
+  "globalNotice": {
     "placeBeforeElement": ".wrapper",
     "title": "",
-    "description": "Here for Open Day? We've got an <a href=\"https://www.york.ac.uk/map/open-day-map\">Open Day Map</a> just for you",
+    "description": "Here for Open Day? We've got an <a href=\"https://www.york.ac.uk/map/open-day\">Open Day Map</a> just for you",
     "noticeModifierClasses": "c-global-notice--highlighted",
     "closeable": true
   },
