--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -1,45 +1,50 @@
 {
-  "geoJSONFile": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&query=!padrenullquery&num_ranks=5000&MBL=800",
-  "globalMapOptions": {
-    "mapTitle" : "Campus map"
-  },
-  "mapButtons":[
-    {
-      "id": "food-and-drink",
-      "value": "Food and drink",
-      "iconClass": "c-icon--coffee"
-    },
-    {
-      "id": "study-spaces",
-      "value": "Study spaces",
-      "iconClass": "c-icon--book"
-    },
-    {
-      "id": "shops",
-      "value": "Shops",
-      "iconClass": "c-icon--shopping-basket"
-    },
-    {
-      "id": "car-parks",
-      "value": "Car parks",
-      "iconClass": "c-icon--car"
-    },
-    {
-      "id": "bus-stops",
-      "value": "Bus stops",
-      "iconClass": "c-icon--bus"
-    },
-    {
-      "id": "cash-machines",
-      "value": "Cash machines",
-      "iconClass": "c-icon--money"
-    },
-    {
-      "id": "post-boxes",
-      "value": "Post boxes",
-      "iconClass": "c-icon--envelope"
-    }
-  ],
+  "geoJSONFile": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap-openday&form=geojson&query=!padrenullquery&num_ranks=5000&MBL=800",
+"globalMapOptions": {
+"mapTitle" : "Open Day map"
+},
+"mapButtons":[
+{
+"id": "information-points",
+"value": "Information points",
+"iconClass": "c-icon--info-circle"
+},
+{
+"id": "view-accommodation",
+"value": "View accommodation",
+"iconClass": "c-icon--bed"
+},
+{
+"id": "food-and-drink",
+"value": "Food and drink",
+"iconClass": "c-icon--coffee"
+},
+{
+"id": "shops",
+"value": "Shops",
+"iconClass": "c-icon--shopping-basket"
+},
+{
+"id": "cash-machines",
+"value": "Cash machines",
+"iconClass": "c-icon--money"
+},
+{
+"id": "shuttle-bus",
+"value": "Shuttle bus",
+"iconClass": "c-icon--bus"
+},
+{
+"id": "bus-stops",
+"value": "Bus stops",
+"iconClass": "c-icon--bus"
+},
+{
+"id": "disabled-parking",
+"value": "Disabled parking",
+"iconClass": "c-icon--wheelchair"
+}
+],
   "globalNotice__UNCOMMENT_TO_USE": {
     "placeBeforeElement": ".wrapper",
     "title": "",
@@ -47,7 +52,7 @@
     "noticeModifierClasses": "c-global-notice--highlighted",
     "closeable": true
   },
-  "pointsOfInterest__UNCOMMENT_TO_USE" : [
+  "pointsOfInterest" : [
     {
       "title": "Piazza Building",
       "lat": 53.947752,
