--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -40,7 +40,7 @@
       "iconClass": "c-icon--envelope"
     }
   ],
-  "globalNotice": {
+  "globalNotice__UNCOMMENT_TO_USE": {
     "placeBeforeElement": ".wrapper",
     "title": "",
     "description": "Here for Open Day? We've got an <a href=\"https://www.york.ac.uk/map/openday\">Open Day Map</a> just for you",
