--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -45,10 +45,10 @@
 "iconClass": "c-icon--wheelchair"
 }
 ],
-  "globalNotice__UNCOMMENT_TO_USE": {
+  "globalNotice": {
     "placeBeforeElement": ".wrapper",
     "title": "",
-    "description": "Here for Open Day? We've got an <a href=\"https://www.york.ac.uk/map/open-day-map\">Open Day Map</a> just for you",
+    "description": "This map shows information for our Open Day visitors. Switch to the <a href=\"https://www.york.ac.uk/map\">full map</a> to see all locations and facilities",
     "noticeModifierClasses": "c-global-notice--highlighted",
     "closeable": true
   },
