--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "image-webpack-loader": "4.3.1",
     "mini-css-extract-plugin": "0.4.1",
     "optimize-css-assets-webpack-plugin": "5.0.0",
+    "rollbar": "^2.4.4",
     "style-loader": "0.21.0",
     "uglifyjs-webpack-plugin": "1.2.7",
     "url-loader": "1.0.1",
