--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.8",
     "webpack-merge": "4.1.4"
+  },
+  "renovate": {
+    "automerge": true,
+    "major": {
+      "automerge": false
+    }
   }
 }
