fix: add fallback for location title usage
- add legacy support for location title as fallback if location id unavailable
- move large map styles array into config json

--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -3,6 +3,42 @@
   "globalMapOptions": {
     "mapTitle" : "Campus map"
   },
+  "mapStyles": [
+    {
+      "featureType": "landscape.man_made",
+      "elementType": "geometry.fill",
+      "stylers": [
+        {
+          "color": "#eeeeee"
+        }
+      ]
+    },
+    {
+      "featureType": "landscape.natural",
+      "elementType": "geometry.fill",
+      "stylers": [
+        {
+          "color": "#E7ECB1"
+        }
+      ]
+    },
+    {
+      "featureType": "water",
+      "elementType": "geometry.fill",
+      "stylers": [
+        {
+          "color": "#7599a2"
+        }
+      ]
+    },
+    {
+      "featureType": "poi",
+      "stylers": [
+        {
+          "visibility": "off"
+        }
+      ]
+    }],
   "mapButtons":[
     {
       "id": "food-and-drink",
