--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -67,7 +67,7 @@
     },
     {
       "id": "disabled-parking",
-      "value": "Disabled Parking",
+      "value": "Disabled parking",
       "iconClass": "c-icon--wheelchair"
     },
     {
