fix: update parking name to accessible from disabled

--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -66,8 +66,8 @@
       "iconClass": "c-icon--car"
     },
     {
-      "id": "disabled-parking",
-      "value": "Disabled parking",
+      "id": "accessible-parking",
+      "value": "Accessible parking",
       "iconClass": "c-icon--wheelchair"
     },
     {
