--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -45,6 +45,9 @@
       "iconClass": "c-icon--wheelchair"
     }
   ],
+  "facilityRedirects" : {
+    "disabled-parking" : "accessible-parking"
+  },
   "globalNotice": {
     "placeBeforeElement": ".wrapper",
     "title": "",
