Initial mapconfig update for open day

--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -1,5 +1,10 @@
 {
-  "geoJSONFile": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&query=!padrenullquery&num_ranks=5000&MBL=800",
+  "data": {
+    "source": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&num_ranks=5000&MBL=800&meta_visibleopenday=1",
+    "fieldOverrides": {
+      "shortdesc": "shortdescopenday"
+    }
+  },
   "globalMapOptions": {
     "mapTitle" : "Campus map",
     "maxZoom" : 18,
