--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -1,9 +1,6 @@
 {
   "data": {
-    "source": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&num_ranks=5000&MBL=800&meta_visibleopenday=1",
-    "fieldOverrides": {
-      "shortdesc": "shortdescopenday"
-    }
+    "source": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&num_ranks=5000&MBL=800&meta_visible=1"
   },
   "globalMapOptions": {
     "mapTitle" : "Campus map",
