Applies open day config

--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -1,6 +1,7 @@
 {
   "data": {
-    "source": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&num_ranks=5000&MBL=800&meta_visible=1"
+    "source": "https://york.funnelback.co.uk/s/search.html?collection=york-uni-campusmap&form=geojson&num_ranks=5000&MBL=800&meta_visibleopenday=1",
+    "fieldOverrides": { "shortdesc": "shortdescopenday"  }
   },
   "globalMapOptions": {
     "mapTitle" : "Campus map",
@@ -38,14 +39,19 @@
   },
   "facilities":[
     {
+      "id": "information-points",
+      "value": "Information points",
+      "iconClass": "c-icon--info-circle"
+    },
+    {
+      "id": "rooms-to-view",
+      "value": "Rooms to view",
+      "iconClass": "c-icon--bed"
+    },
+    {
       "id": "food-and-drink",
       "value": "Food and drink",
       "iconClass": "c-icon--coffee"
-    },
-    {
-      "id": "study-spaces",
-      "value": "Study spaces",
-      "iconClass": "c-icon--book"
     },
     {
       "id": "shops",
@@ -58,14 +64,9 @@
       "iconClass": "c-icon--money"
     },
     {
-      "id": "car-parks",
-      "value": "Car parks",
-      "iconClass": "c-icon--car"
-    },
-    {
-      "id": "accessible-parking",
-      "value": "Accessible parking",
-      "iconClass": "c-icon--wheelchair"
+      "id": "shuttle-bus",
+      "value": "Shuttle bus",
+      "iconClass": "c-icon--bus"
     },
     {
       "id": "bus-stops",
@@ -73,9 +74,9 @@
       "iconClass": "c-icon--bus"
     },
     {
-      "id": "post-boxes",
-      "value": "Post boxes",
-      "iconClass": "c-icon--envelope"
+      "id": "accessible-parking",
+      "value": "Accessible parking",
+      "iconClass": "c-icon--wheelchair"
     }
   ],
   "facilityRedirects" : {
